# peb

./: .gitignore  pyproject.toml
peb/: __init__.py  iteration.py  text.py
tests/: collections_tests.py  iteration_tests.py  number_tests.py  regex_tests.py  text_tests.py  uri_tests.py  utils_tests.py
