[tool.poetry]
name = "peb"
version = "0.0.1"
description = ""
authors = ["Jrog <jrog612@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/jrog612/peb'

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
